# bitrock-unpacker

./: .gitignore  LICENSE.md  README.md  pyproject.toml  ruff.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish.yml  test_publish.yml
bitrock_unpacker/: __init__.py  __main__.py  cli.py  cookfs.py  extract.py  pe.py  tcllist.py
tests/: test_self_checks.py
