[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bitrock-unpacker"
version = "0.1.0"
description = "Pure-Python BitRock/InstallBuilder installer unpacker"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = [
    "pytest", "plugin", "markdown"
]
authors = [
    { name = "Vladimir Petrigo", email = "vladimir.petrigo@gmail.com" },
]


dependencies = []

classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: System :: Archiving",
]

[project.scripts]
bitrock-unpacker = "bitrock_unpacker.cli:main"

[tool.hatch.envs.test]
dependencies = ["pytest"]

[[tool.hatch.envs.test.matrix]]
python = ["3.11", "3.12", "3.13", "3.14"]

[tool.hatch.envs.test.scripts]
run = "pytest {args:tests}"

[tool.setuptools]
packages = ["bitrock_unpacker"]
